--- a/style.css
+++ b/style.css
@@ -1,8 +1,13 @@
+@font-face {
+  font-family: 'samyak';
+  src: url('Samyak-Devanagari.ttf') format('truetype');
+}
+
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: 'Roboto', sans-serif;
+  font-family: 'samyak', 'roboto';
 }
 
 body {
@@ -21,22 +26,23 @@ body {
   color: white;
   word-wrap: normal;
   white-space: nowrap;
-  font-weight: normal;
   text-align: center;
   font-weight: lighter;
   font-size: 2.5em;
+  word-spacing: -0.5em;
   text-shadow: 0 0 2px #ff6f00, 0 0 3px #ff6f00, 0 0 5px #ff9a00, 0 0 20px #ff0;
-  opacity: 0.9;
 }
 
 #shloka-meaning {
+  font-family: 'Raleway', sans-serif;
+  font-weight: 200;
   padding-top: 50px;
   color: #ffda96;
+  text-shadow: 0 0 1px #fff;
   word-wrap: normal;
-  font-size: 1.3em;
+  font-size: 1.5em;
   white-space: nowrap;
   text-align: center;
-  opacity: 0.8;
 }
 
 #canvas1 {
