--- a/style.css
+++ b/style.css
@@ -24,14 +24,15 @@ body {
 }
 
 #shloka {
-  color: white;
+  color: #fefee3;
   word-wrap: normal;
   white-space: nowrap;
   text-align: center;
   font-weight: lighter;
   font-size: 2.5em;
   word-spacing: -0.5em;
-  text-shadow: 0 0 2px #ff6f00, 0 0 3px #ff6f00, 0 0 5px #ff9a00, 0 0 20px #ff0;
+  text-shadow: 0 0 1px #fefee3, 0 0 2px #fefee3, 0px 0 3px #6c391d,
+    0px 0 4px #6c391d, 0px 0 4px #6c391d, 0px 0 5px #6c391d, 0px 0 6px #6c391d;
 }
 
 #shloka-meaning {
